# fuel-forecasting

./: .gitignore  AGENTS.md  BACKTESTING_GUIDE.md  CLAUDE.md  EXAMPLES.md  GEMINI.md  QUICKREF.md  README.md  SETUP.md  backtest.py  cli.py  database.py  forecast_plan.md  forecaster.py  models.py  pyproject.toml  restore_fuel_data.py
.claude/: settings.local.json
