[project]
name = "fuel-forecasting"
version = "2.0.0"
description = "Fuel volume forecasting system for gas stations"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1",
    "python-dateutil>=2.8.0",
    "scikit-learn>=1.3.0",
    "plotly >= 1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
