[project]
name = "fuel-forecasting"
version = "2.0.0"
description = "Fuel volume forecasting system for gas stations"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "statsmodels>=0.14.0",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
